<resources>

    <string name="app_name">myApps35 Tutors</string>

    <string name="facebook_app_id">563646337165868</string>

    // if your App ID is 1234567, you should use fb1234567
    <string name="fb_login_protocol_scheme">fb563646337165868</string>


    <string name="hello">Hello World, AndroidBuildingMusicPlayerActivity!</string>
    <string name="title_music_main">MainActivity</string>

    <string name="menu_settings">Settings</string>
    <string name="title_gcm_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo
        Server.
    </string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d
        attempts.
    </string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).
    </string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="title_activity_test">TEst</string>

    <string name="title_activity_my_loading_view">MyLoadingView</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_sqlite">Sqlite</string>
    <string name="printing_text_using_printer_via_wifi">Printing Text using printer Via Wifi
    </string>
    <string name="wifi_printer">Wifi Printer</string>
    <string name="music_player">Music Player</string>
    <string name="gcm">GCM</string>
    <string name="pattern_lock">Pattern Lock</string>
    <string name="wifi_chat">Wifi Chat</string>
    <string name="custom_loading_progress_bar">Custom Loading Progress Bar</string>
    <string name="method_1">Method 1</string>
    <string name="file_sharing_via_intent">File Sharing Via Intent</string>
    <string name="recycler_view">Recycler View Example</string>
    <string name="recycler_view_desc">Simple example for to create recycler view with customized
        view
    </string>
    <string name="create_intent_get_file_from_internal_external_drive_via_intent">
        <![CDATA[Create intent & get file from internal/external/drive via intent]]></string>
    <string name="image_from_gallery">Image From Gallery</string>
    <string name="image_from_devices">Image from Devices</string>
    <string name="image_by_camera">Image by Camera</string>
    <string name="files_from_sdcard">Files From SdCard</string>
    <string name="files_from_device">Files from Device</string>
    <string name="android_bottom_sheet">Android Bottom Sheet</string>
</resources>
