<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.myapps35.tutorial.FileSharingViaIntent.FileSharingActivity">

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_from_gallery"/>

    <Button
        android:id="@+id/btnImages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_from_devices"/>

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_by_camera"/>

    <Button
        android:id="@+id/btnSdCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/files_from_sdcard"/>

    <Button
        android:id="@+id/btnDeviceFiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/files_from_device"/>

</LinearLayout>
